11 July 2009 (svn.debian.org/tux4kids - revision 1183
[Sarah Frisk <ssfrisk@gmail.com> ]
	- added icons for word list editor and placed them in data/images/menu.  Still
	need to implement them.

6 July 2009 (svn.debian.org/tux4kids - revision 1147)
[ Sarah Frisk <ssfrisk@gmail.com> ]
	- Fixed spacing issue in ChooseWord()
	- Fixed random garbage adding in ChooseWord()
	- Simplified ChooseWord() in general
	- For the most part ChooseWord() functionality is finished.  What is left is to had a 
	more comprehensible GUI than what is currently there (which involves figuring out how to 
	move the wordlist editor from the top left hand corner of the screen).  Also need to make 
	is so ChooseFile() can create wordlists, but that should be easy since the set up of that 
	function is very similar to ChooseWord(). 

30 Jun 2009 (svn.debian.org/tux4kids - revision 1119)
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Build - changed file permissions on installed localstatedir and sysconfdir
	          from 755 to 777 so they will be user-writable.

June 2009(svn.debian.org/tux4kids - previous revisions to 1116)
[ Sarah Frisk <ssfrisk@gmail.com>]
		- Custom Word Lists Configuration Program (titlescreen.c):
		- Cleaned up the previous wordlist configure functions to make code more readable/fix
		  previous bug errors.
		- Fixed issue where the wordlist reads the first word in the list as
		  title name.  Need to get rid of the the .txt bit at the end, but 
		  currently reads everything correctly. NOTE: the current wordlist editor is
		  reading the first word in the wordlist as the name of the list.
		- Lets the user choose a custom wordlist in the choose wordlist menu before
		  playing a game.
		- Fixed the backspace button in wordlist editor to prevent bus errors
		- Return key now recognizes a new word.  Still a few bugs in this though, since
		  random characters are getting passed into the new word occasionally.
